# django_crud

./: README.md  pyproject.toml
snacks_crud_project/: db.sqlite3
snacks_crud_project/snacks/: urls.py  views.py
snacks_crud_project/snacks/migrations/: 0001_initial.py  0002_auto_20211120_2130.py  0003_snack_purchaser.py
snacks_crud_project/snacks_crud_project/: settings.py
snacks_crud_project/templates/: base.html  snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
